--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,11 @@
-pool: MyAgentPool
+trigger:
+- main
+
+pool: 
+ name: Default
+
+variables:
+ buildConfiguratrion: 'Release'
+
 steps:
-- bash: echo hello world
+- script: dotnet build --configuration $(buildConfiguration)
